# EcoPaste-Sync

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.en-US.md  README.ja-JP.md  README.md  README.zh-TW.md  SIMPLE_PLUGIN_SUMMARY.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: pull_request.yml
docs/: CLOUD_SYNC_ARCHITECTURE.md  EcoPaste-最佳实践指南.md  architecture-diagram.md  云同步技术方案.md  云同步需求.md
docs/plans/: 2026-01-20-shortcut-blacklist-design.md
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  [object Promise]  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/setup/: linux.rs  macos.rs  mod.rs
src-tauri/src/plugins/active_window/: Cargo.toml  build.rs
src-tauri/src/plugins/active_window/permissions/: default.toml
src-tauri/src/plugins/active_window/src/: commands.rs  lib.rs
src-tauri/src/plugins/audio_effect/: Cargo.toml  build.rs
src-tauri/src/plugins/audio_effect/permissions/: default.toml
src-tauri/src/plugins/audio_effect/src/: commands.rs  lib.rs
src-tauri/src/plugins/auto_sync/: Cargo.toml  build.rs
src-tauri/src/plugins/auto_sync/permissions/: default.toml
src-tauri/src/plugins/auto_sync/src/: commands.rs  lib.rs
src-tauri/src/plugins/clipboard/: Cargo.toml  build.rs
src-tauri/src/plugins/clipboard/permissions/: default.toml
src-tauri/src/plugins/clipboard/src/: commands.rs  lib.rs
src-tauri/src/plugins/clipboard/src/commands/: audio.rs  utils.rs
src-tauri/src/plugins/common/: Cargo.toml  build.rs
src-tauri/src/plugins/common/permissions/: default.toml
src-tauri/src/plugins/common/src/: active_window.rs  audio.rs  commands.rs  config.rs  constants.rs  file.rs  id.rs  lib.rs  paths.rs  server_config.rs  types.rs
src-tauri/src/plugins/common/src/types/: detection.rs
src-tauri/src/plugins/database/: Cargo.toml  build.rs
src-tauri/src/plugins/database/permissions/: default.toml
src-tauri/src/plugins/database/src/: change_tracker.rs  cleanup.rs  commands.rs  config.rs  database.rs  debug.rs  delete.rs  filter.rs  lib.rs  models.rs  source_app.rs
src-tauri/src/plugins/detector/: Cargo.toml  build.rs
src-tauri/src/plugins/detector/permissions/: default.toml
src-tauri/src/plugins/detector/src/: commands.rs  lib.rs  models.rs
src-tauri/src/plugins/detector/src/detectors/: code.rs  color.rs  email.rs  markdown.rs  mod.rs  path.rs  url.rs
src-tauri/src/plugins/hotkey/: Cargo.toml  build.rs
src-tauri/src/plugins/hotkey/permissions/: default.toml
src-tauri/src/plugins/hotkey/src/: blacklist.rs  commands.rs  lib.rs
src-tauri/src/plugins/migration/: Cargo.toml
src-tauri/src/plugins/migration/src/: database_migrator.rs  detector.rs  executor.rs  lib.rs  models.rs
src-tauri/src/plugins/paste/: Cargo.toml  build.rs
src-tauri/src/plugins/paste/permissions/: default.toml
src-tauri/src/plugins/paste/src/: lib.rs
src-tauri/src/plugins/paste/src/commands/: linux.rs  macos.rs  mod.rs  windows.rs  windows_impl.rs
src-tauri/src/plugins/sync/: Cargo.toml  build.rs
src-tauri/src/plugins/sync/permissions/: default.toml
src-tauri/src/plugins/sync/src/: auto_sync_manager.rs  bookmark_sync_manager.rs  cleanup_manager.rs  commands.rs  config_sync_manager.rs  data_manager.rs  events.rs  file_sync_manager.rs  lib.rs  sync_core.rs  sync_engine.rs  sync_utils.rs  types.rs  webdav.rs
src-tauri/src/plugins/tray/: Cargo.toml  build.rs
src-tauri/src/plugins/tray/permissions/: default.toml
src-tauri/src/plugins/tray/src/: commands.rs  lib.rs
src-tauri/src/plugins/webdav/: Cargo.toml  build.rs
src-tauri/src/plugins/webdav/permissions/: default.toml
src-tauri/src/plugins/webdav/src/: commands.rs  lib.rs
src-tauri/src/plugins/window/: Cargo.toml  build.rs
src-tauri/src/plugins/window/permissions/: default.toml
src-tauri/src/plugins/window/src/: lib.rs
src-tauri/src/plugins/window/src/commands/: macos.rs  mod.rs  not_macos.rs
src/assets/css/: global.scss
src/components/Audio/: index.tsx
src/components/AudioInitializer/: index.tsx
src/components/BookmarkTooltip/: index.tsx
src/components/CodeEditor/: index.tsx
src/components/ColorPicker/: index.tsx
src/components/DragPreview/: index.tsx
src/components/FileStatusIndicator/: index.tsx
src/components/LazyDownloadButton/: index.tsx
src/components/ProShortcut/: index.tsx
src/components/Scrollbar/: index.tsx
src/components/SyntaxHighlighter/: index.tsx  styles.css
src/constants/: index.ts
src/database/: index.tsx
src/hooks/: useAppIcon.ts  useAudioEffect.ts  useImmediateKey.ts  useLazyDownload.ts  useShortcutSubscription.ts  useTauriFocus.ts  useTheme.ts  useThumbnail.ts  useTray.ts  useWindowState.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/pages/Main/: index.tsx
src/pages/Preference/: index.tsx
src/pages/Preview/: index.tsx
src/plugins/: activeWindow.ts  audioEffect.ts  autoSync.ts  bookmark.test.ts  bookmark.ts  clipboard.ts  database.ts  hotkey.ts  paste.ts  sync.ts  webdav.ts  window.ts
src/router/: index.ts
src/services/: imageSyncService.ts  zipImageSyncService.ts
src/stores/: clipboard.ts  global.ts
src/types/: database.d.ts  plugin.d.ts  store.d.ts  sync.d.ts
src/utils/: autoSync.ts  bookmarkManager.ts  bookmarkSync.ts  cloudDataManager.ts  codeDetector.ts  color.test.ts  color.ts  configSync.ts  deleteManager.ts  fileCacheManager.ts  fileContentProcessor.ts  fileDownloadService.ts  filePackageManager.ts  fileSegmentManager.ts  fileSyncManager.ts  is.test.ts  is.ts  localDataManager.ts  path.ts  realtimeSync.ts  segmentDownloadService.ts  shared.ts  store.ts  syncConflictResolver.ts  syncEngine.ts  syncEngine.ts.backup  syncErrorTracker.ts  syncFilter.ts  zipFileManager.ts
tests/: optimization-plan.md  sync-scenarios-test-report.json  sync-scenarios-test.cjs  test-analysis.md  webdav-test-report.json  webdav-test.cjs
(+44 files in other folders)
