[workspace]
resolver="2"
members = [
    "src-tauri"
]

[workspace.dependencies]
tauri = "2"
serde = "1"
serde_json = "1"
fs_extra = "1"
log = ">=0.4, <1"
cocoa = ">=0.25, <1"
tauri-plugin-shell = "2"
tauri-plugin-fs-pro = "2"
tauri-plugin = { version = "2", features = ["build"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-eco-window = { path = "./src-tauri/src/plugins/window" }
tauri-plugin-eco-clipboard = { path = "./src-tauri/src/plugins/clipboard" }
tauri-plugin-eco-ocr = { path = "./src-tauri/src/plugins/ocr" }
tauri-plugin-eco-paste = { path = "./src-tauri/src/plugins/paste" }
tauri-plugin-eco-autostart = { path = "./src-tauri/src/plugins/autostart" }
tauri-plugin-eco-webdav = { path = "./src-tauri/src/plugins/webdav" }
tauri-plugin-eco-auto-sync = { path = "./src-tauri/src/plugins/auto_sync" }
tauri-plugin-eco-active-window = { path = "./src-tauri/src/plugins/active_window" }
tauri-plugin-eco-database = { path = "./src-tauri/src/plugins/database" }
tauri-plugin-eco-sync = { path = "./src-tauri/src/plugins/sync" }

# 依赖版本统一 - 使用较新版本
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
file_icon_provider = "0.4"
md5 = { version = "0.7", default-features = false, features = ["std"] }
