[package]
name = "tauri-plugin-eco-active-window"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-active-window"

[lib]
name = "tauri_plugin_eco_active_window"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri.workspace = true
serde.workspace = true
# 用于获取文件/应用图标
file_icon_provider.workspace = true
# 用于图像处理
image.workspace = true
# 用于 Base64 编码
base64 = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
tauri-plugin.workspace = true

