[package]
name = "tauri-plugin-eco-audio-effect"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-audio-effect"

[lib]
name = "tauri_plugin_eco_audio_effect"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri.workspace = true
serde.workspace = true
rodio = "0.20"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[build-dependencies]
tauri-plugin.workspace = true