[package]
name = "tauri-plugin-eco-auto-sync"
version = "0.1.0"
authors = []
description = "Auto sync plugin for EcoPaste cloud sync"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-auto-sync"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log.workspace = true

[build-dependencies]
tauri-plugin.workspace = true