[package]
name = "tauri-plugin-eco-clipboard"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-clipboard"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
clipboard-rs = ">=0.2, <1"
chrono = "0.4"
# 音频播放
rodio = "0.18"
# 依赖本地 database 插件
tauri-plugin-eco-database = { path = "../database" }
# 依赖本地 detector 插件
tauri-plugin-eco-detector = { path = "../detector" }
# 依赖本地 common 插件（用于配置缓存）
tauri-plugin-eco-common = { path = "../common" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[build-dependencies]
tauri-plugin.workspace = true
