[package]
name = "tauri-plugin-eco-database"
version = "0.1.0"
description = "Unified Database Plugin for EcoPaste"
authors = []
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-database"

[build-dependencies]
tauri-plugin.workspace = true

[dependencies]
tauri.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
