[package]
name = "tauri-plugin-eco-database"
version = "0.1.0"
description = "Unified Database Plugin for EcoPaste"
authors = []
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-database"

[build-dependencies]
tauri-plugin.workspace = true

[dependencies]
tauri.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
# 用于获取文件/应用图标
file_icon_provider.workspace = true
# 用于图像处理
image.workspace = true
# 用于 Base64 编码
base64 = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = []
