[package]
name = "tauri-plugin-eco-migration"
version = "0.1.0"
description = "Data migration plugin for EcoPaste-Sync"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
tempfile = "3"
tauri.workspace = true

[dev-dependencies]
assert_fs = "1"
