[package]
name = "tauri-plugin-eco-webdav"
version = "0.1.0"
authors = []
description = "WebDAV plugin for EcoPaste cloud sync"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-webdav"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
anyhow = "1.0"
dirs = "5.0"

[build-dependencies]
tauri-plugin.workspace = true