[package]
name = "tauri-plugin-eco-window"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-eco-window"

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
window-vibrancy = "0.6"
log.workspace = true
scopeguard = "1"
tokio = { version = "1.0", features = ["sync", "time"] }
tauri-plugin-eco-common = { workspace = true }
once_cell = "1.20"

[target."cfg(target_os = \"windows\")".dependencies]
windows-version = "0.1"

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true